--- a/index.html
+++ b/index.html
@@ -4,10 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Starbucks</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- <div class="container"> -->
+        <header>
+            <!-- <img src="https://www.starbucks.co.kr/common/img/common/logo.png" alt=""> -->
+            <div>
+                <ul class="header_1">
+                    <li>Sign In</li>
+                    <li>My Starbucks</li>
+                    <li>Customer Service & Ideas</li>
+                    <li>Find a store</li>
+                    <button class="search">search</button>
+                </ul>
+            </div>
+            <div>
+                <ul class="header_2">
+                    <li>COFFEE</li>
+                    <li>MENU</li>
+                    <li>STORE</li>
+                    <li>RESPONSIBILITY</li>
+                    <li>STARBUCKS REWARDS</li>
+                    <li>WHAT'S NEWS</li>
+                </ul>
+            </div>
+        </header>
+    <!-- </div> -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="main.js"></script>
 </body>
 </html>
