--- a/index.html
+++ b/index.html
@@ -7,18 +7,21 @@
     <title>Starbucks</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/02db69aa2d.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <!-- <div class="container"> -->
         <header>
-            <!-- <img src="https://www.starbucks.co.kr/common/img/common/logo.png" alt=""> -->
+            <div class="logo">
+                <img src="https://www.starbucks.co.kr/common/img/common/logo.png" alt="">
+            </div>
             <div>
                 <ul class="header_1">
                     <li>Sign In</li>
                     <li>My Starbucks</li>
                     <li>Customer Service & Ideas</li>
-                    <li>Find a store</li>
-                    <button class="search">search</button>
+                    <li>Find a store <button class="search"><i class="fa-solid fa-magnifying-glass"></i></button></li>
+                    
                 </ul>
             </div>
             <div>
