yellow class changing

--- a/index.html
+++ b/index.html
@@ -10,21 +10,20 @@
     <script src="https://kit.fontawesome.com/02db69aa2d.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <!-- <div class="container"> -->
         <header>
             <div class="logo">
-                <img src="https://www.starbucks.co.kr/common/img/common/logo.png" alt="">
+                <a href="/" title="스타벅스 메인 페이지"></a>
             </div>
-            <div>
+            <nav>
                 <ul class="header_1">
                     <li>Sign In</li>
                     <li>My Starbucks</li>
                     <li>Customer Service & Ideas</li>
-                    <li>Find a store <button class="search"><i class="fa-solid fa-magnifying-glass"></i></button></li>
-                    
+                    <li>Find a store</li>
+                     <button class="search"><i class="fa-solid fa-magnifying-glass"></i></button>
                 </ul>
-            </div>
-            <div>
+            </nav>
+            <nav>
                 <ul class="header_2">
                     <li>COFFEE</li>
                     <li>MENU</li>
@@ -33,9 +32,20 @@
                     <li>STARBUCKS REWARDS</li>
                     <li>WHAT'S NEWS</li>
                 </ul>
-            </div>
+            </nav>
         </header>
-    <!-- </div> -->
+        <section class="yellow">
+            <div class="find_text">
+                <img src="https://image.istarbucks.co.kr/upload/common/img/main/2022/m_2022_Summer1_main_slogun.png" alt="">
+                <button><strong>자세히 보기</strong></button>
+            </div>
+            <div class="coffee_imgs">
+                <img src="https://image.istarbucks.co.kr/upload/common/img/main/2022/2022_Summer1_main_rollinmint.png" alt="" class="rollin">
+                <img src="./punch-img.png" alt="" class="punch-img">
+            </div>
+        </section>
+        
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="main.js"></script>
 </body>
