--- a/index.html
+++ b/index.html
@@ -38,10 +38,13 @@
             <div class="find_text">
                 <img src="https://image.istarbucks.co.kr/upload/common/img/main/2022/m_2022_Summer1_main_slogun.png" alt="">
                 <button><strong>자세히 보기</strong></button>
-            </div>
-            <div class="coffee_imgs">
-                <img src="https://image.istarbucks.co.kr/upload/common/img/main/2022/2022_Summer1_main_rollinmint.png" alt="" class="rollin">
-                <img src="./punch-img.png" alt="" class="punch-img">
+            
+                <div class="coffees">
+                    <img src="https://image.istarbucks.co.kr/upload/common/img/main/2022/2022_Summer1_main_rollinmint.png" alt="" class="rollin">
+                    <img src="./punch-img-removebg.png" alt="" class="punch_img">
+                    <img src="./punch-text-removebg.png" alt="" class="punch_text">
+                    <img src="./pomelo.png" alt="" class="pomelo">
+                </div>
             </div>
         </section>
         
