--- a/index.html
+++ b/index.html
@@ -1,71 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Starbucks</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/02db69aa2d.js" crossorigin="anonymous"></script>
-</head>
-<body>
-        <div class="container-fluid">
-            <div class="row">
-                <header class="col-xs-12">
-                    <div class="logo">
-                        <a href="/" title="스타벅스 메인 페이지"></a>
-                    </div>
-                    <nav>
-                        <ul class="header_1">
-                            <li>Sign In</li>
-                            <li>My Starbucks</li>
-                            <li>Customer Service & Ideas</li>
-                            <li>Find a store</li>
-                             <button class="search"><i class="fa-solid fa-magnifying-glass"></i></button>
-                        </ul>
-                    </nav>
-                    <nav>
-                        <ul class="header_2">
-                            <li>COFFEE</li>
-                            <li>MENU</li>
-                            <li>STORE</li>
-                            <li>RESPONSIBILITY</li>
-                            <li>STARBUCKS REWARDS</li>
-                            <li>WHAT'S NEWS</li>
-                        </ul>
-                    </nav>
-                </header>
-                <section class="yellow col-xs-12">
-                    <div class="find_text">
-                        <img src="https://image.istarbucks.co.kr/upload/common/img/main/2022/m_2022_Summer1_main_slogun.png" alt="">
-                        <button><strong>자세히 보기</strong></button>
-                
-                        <div class="coffees">
-                            <img src="https://image.istarbucks.co.kr/upload/common/img/main/2022/2022_Summer1_main_rollinmint.png" alt="" class="rollin">
-                            <img src="./punch-img-removebg.png" alt="" class="punch_img">
-                            <img src="./punch-text-removebg.png" alt="" class="punch_text">
-                            <img src="./pomelo.png" alt="" class="pomelo">
-                        </div>
-                    </div>
-                </section>
-                <section class="starbuck_notice ">
-                    <div class="notice col-xs-6 col-sm-6">
-                        <div>
-                            공지사항 <span>내용</span>
-                        </div>
-                        <button><i class="fa-solid fa-plus text-white fa-2x"></i></button>
-                
-                    </div>
-                    <div class="promotion col-xs-6 col-sm-6">
-                        <span>스타벅스 프로모션</span>
-                        <button><i class="fa-solid fa-angle-down fa-2x"></i></button>
-                    </div>
-                </section>
-            </div>
-        </div>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/02db69aa2d.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <div class="container-fluid">
+      <div class="row">
+        <header class="col-xs-12">
+          <div class="logo">
+            <a href="/" title="스타벅스 메인 페이지"></a>
+          </div>
+          <!-- nav bar를 두개씩 쓰지는 않을거야, navigation bar는 항상 하나여야 한다는 규칙은 없지만 지금 마크업에서는 하나만 사용해도 될 것 같다. -->
+          <nav>
+            <ul class="header_1">
+              <li>Sign In</li>
+              <li>My Starbucks</li>
+              <li>Customer Service & Ideas</li>
+              <li>Find a store</li>
+              <button class="search">
+                <i class="fa-solid fa-magnifying-glass"></i>
+              </button>
+            </ul>
+          </nav>
+          <nav>
+            <ul class="header_2">
+              <li>COFFEE</li>
+              <li>MENU</li>
+              <li>STORE</li>
+              <li>RESPONSIBILITY</li>
+              <li>STARBUCKS REWARDS</li>
+              <li>WHAT'S NEWS</li>
+            </ul>
+          </nav>
+        </header>
+        <section class="yellow col-xs-12">
+          <div class="find_text">
+            <img
+              src="https://image.istarbucks.co.kr/upload/common/img/main/2022/m_2022_Summer1_main_slogun.png"
+              alt=""
+            />
+            <!-- 보통 현업에서는 strong tag를 쓰지 않고 그런건 css font-bold처리해서 해줘 -->
+            <button><strong>자세히 보기</strong></button>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+            <div class="coffees">
+              <img
+                src="https://image.istarbucks.co.kr/upload/common/img/main/2022/2022_Summer1_main_rollinmint.png"
+                alt=""
+                class="rollin"
+              />
+              <img src="./punch-img-removebg.png" alt="" class="punch_img" />
+              <img src="./punch-text-removebg.png" alt="" class="punch_text" />
+              <img src="./pomelo.png" alt="" class="pomelo" />
+            </div>
+          </div>
+        </section>
+        <section class="starbuck_notice">
+          <div class="notice col-xs-6 col-sm-6">
+            <div>공지사항 <span>내용</span></div>
+            <button><i class="fa-solid fa-plus text-white fa-2x"></i></button>
+          </div>
+          <div class="promotion col-xs-6 col-sm-6">
+            <span>스타벅스 프로모션</span>
+            <button><i class="fa-solid fa-angle-down fa-2x"></i></button>
+          </div>
+        </section>
+      </div>
+    </div>
+
+    <script
+      src="https://cdn.jsdelivr.ne줘/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
     <script src="main.js"></script>
-</body>
+  </body>
 </html>
